home-perfect_pixel-responsive

--- a/index.html
+++ b/index.html
@@ -4,139 +4,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso CSS y HTML </title>
+    <title>Html y CSS PP</title>
     <link rel="stylesheet" href="./styles.css">
+    <!-- fonts Archivo-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+        rel="stylesheet">
 </head>
 
-<body>
+<body class=" desktop">
+    <div class="cont">
+        <!-- TITLE -->
+        <div class="topic-info">
+            <h1 class="topic-info-topic">Technology Tool Stack</h1>
+            <StateDefaultWrapper class="design-component-instance-node" infoFrameInfo="info-2.svg"
+                stateProp="default" />
+        </div>
 
-    <header class="nav">
-        <div class="title__border">
-            <div class="title">
-                <div class="frame">
-                    <div class="text">Curso HTML y CSS</div>
-                </div>
+        <!-- HTML -->
+        <div class="html">
+            <div class="html-logo">
+                <img class="img" alt="Html logo logo" src="./assets/html.svg" />
+                <div class="text-wrapper">html</div>
             </div>
+            <nav class="html-nav">
+                <ul class="html-nav-mosaico">
+                    <li>
+                        <a class="nav-link" href="./HTML/textos.html">Textos</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/formularios/index.html">Formularios</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/iframe/">iFrame</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/listas-tablas/listas.html">Listas</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/listas-tablas/tablas.html">Tablas</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/audio-video/index.html">Audio-Videos</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/etiquetas-atributos/">Etiquetas</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/etiquetas-atributos/atributos.html">Atributos</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/etiquetas-extra/index.html">Etiquetas-extra</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/enlaces-imágenes/enlace.html">Enlaces</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./HTML/enlaces-imágenes/imagenes/">Imágenes</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="header__menu">
-            <a href="#" class="header__menu--link">Contenido</a>
-            <a href="#" class="header__menu--link">Objetivo</a>
-            <button class="header__menu--button">Iniciar</button>
-        </nav>
-    </header>
 
-    <!-- HTML -->
-    <div class="cont html">
-        <div class="cont__logo">
-            <img class="cont__logo--logo" src="./assets/html.svg" alt="">
-            <p class="cont__text">HTML</p>
+        <!-- CSS -->
+        <div class="css">
+            <div class="css-logo">
+                <img class="img" alt="Css logo logo" src="./assets/css.svg" />
+                <div class="text-wrapper">css</div>
+            </div>
+            <nav class="css-nav">
+                <ul class="css-nav-mosaico">
+                    <li>
+                        <a class="nav-link" href="./CSS/box-model/index.html">Box model</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/box-model/colapso.html">Colapso</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/box-model/elementos.html">Elementos</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/colores-fondos/index.html">Colores-Fondos</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/css-grid/index.html">CSS-grid</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/css-grid/galeria-imagenes/index.html">Galería-CSS-grid</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/custom-properties/index.html">Custom properties</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/flexbox/index.html">Flex-Box</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/flexbox/landing-page/index.html">Flex-Box-Landing-page</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/fundamentos/index.html">Fundamentos</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/mediaqueries/index.html">Mediaquery</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/position/index.html">Position</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/selectores/index.html">Selectores</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/unidades-medidas/index.html">Unidades de medida</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="./CSS/index.html">Estilos</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="cont__contents">
-            <ul>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/textos.html">Textos</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/formularios/index.html">Formularios</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/iframe/">iFrame</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/listas-tablas/listas.html">Listas</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/listas-tablas/tablas.html">Tablas</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/audio-video/index.html">Audio-Videos</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/etiquetas-atributos/">Etiquetas</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/etiquetas-atributos/atributos.html">Atributos</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/etiquetas-extra/index.html">Etiquetas-extra</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/enlaces-imágenes/enlace.html">Enlaces</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./HTML/enlaces-imágenes/imagenes/">Imágenes</a>
-                </li>
-            </ul>
-        </nav>
     </div>
+    <p class="copiright">Copyright © 2023 Dayron Peeta</p>
 
-    <!-- CSS -->
-    <div class="cont css">
-        <div class="cont__logo">
-            <img class="cont__logo--logo" src="./assets/css.svg" alt="">
-            <p class="cont__text">CSS</p>
-        </div>
-        <nav class="cont__contents">
-            <ul>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/box-model/index.html">Box model</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/box-model/colapso.html">Colapso</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/box-model/elementos.html">Elementos</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/colores-fondos/index.html">Colores-Fondos</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/css-grid/index.html">CSS-grid</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link"
-                        href="./CSS/css-grid/galeria-imagenes/index.html">Galería-CSS-grid</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/custom-properties/index.html">Custom properties</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/flexbox/index.html">Flex-Box</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link"
-                        href="./CSS/flexbox/landing-page/index.html">Flex-Box-Landing-page</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/fundamentos/index.html">Fundamentos</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/mediaqueries/index.html">Mediaquery</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/position/index.html">Position</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/selectores/index.html">Selectores</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/unidades-medidas/index.html">Unidades de medida</a>
-                </li>
-                <li class="cont__contents--elem">
-                    <a class="cont__contents--link" href="./CSS/index.html">Estilos</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-
-<footer class="footer">
-    <p class="info">
-        El objetivo de este sitio es recoger toda la información que tengo al respecto de HTML y CSS para mi posterior consulta o a quien pueda interesar
-    </p>
-    <p class="copy-right">
-        Copyright © 2023 Dayron Peeta
-    </p>
-</footer>    
 </body>
 
 </html>
