mobile-orientacion-logo_padding_nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- HTML -->
-        <div class="block_html block">
+        <div class="card_html card">
             <div class="html-logo logo">
                 <img class="img" alt="Html logo logo" src="./assets/html.svg" />
                 <div class="text-wrapper">html</div>
@@ -67,7 +67,7 @@
         </div>
 
         <!-- CSS -->
-        <div class="block_css block">
+        <div class="card_css card">
             <div class="css-logo logo">
                 <img class="img" alt="Css logo logo" src="./assets/css.svg" />
                 <div class="text-wrapper">css</div>
