step-1-indexHTML-design

--- a/HTML/etiquetas-atributos/index.html
+++ b/HTML/etiquetas-atributos/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contenido</title>
+    <title>HTML</title>
 </head>
 <body>
+    <!-- ETIQUETAS -->
     <p>https://canincluede.glitch.me/ saber si una etiqueta puede ir dentro de otra</p> 
     <h1>etiquetas de contenido</h1>
     
