--- a/HTML/textos.html
+++ b/HTML/textos.html
@@ -17,7 +17,7 @@
     <small>más pequeño</small><br>
     <mark>resaltado</mark><br>
     <s>lo tacha</s><br>
-    <cite>hacer una cita(tema-autor)</cita><br>
+    <cite>hacer una cita(tema-autor)</cite><br>
     A <sup>superíndice</sup><br>
     A <sub>subíndice</sub><br>
     <br> <!-- salto de línea -->     
