--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
         <!-- HTML -->
         <div class="card_html card">
-            <div class="html-logo logo">
+            <a href="./HTML/index.html" class="html-logo logo">
                 <img class="img" alt="Html logo logo" src="./assets/html.svg" />
                 <div class="text-wrapper">html</div>
-            </div>
+            </a>
             <nav class="html-nav nav">
                 <ul class="html-nav-degradado nav_degradado">
                     <li>
@@ -68,10 +68,10 @@
 
         <!-- CSS -->
         <div class="card_css card">
-            <div class="css-logo logo">
+            <a href="#" class="css-logo logo">
                 <img class="img" alt="Css logo logo" src="./assets/css.svg" />
                 <div class="text-wrapper">css</div>
-            </div>
+            </a>
             <nav class="css-nav nav">
                 <ul class="css-nav-degradado nav_degradado">
                     <li>
