--- a/HTML/etiquetas-atributos/atributos.html
+++ b/HTML/etiquetas-atributos/atributos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atributos</title>
-    <link rel="stylesheet" href="../estilos.css" type="text/css" media="all">
+    <link rel="stylesheet" href="./estilos.css" type="text/css" media="all">
 </head>
 <body>
     <h1>class ID y desplazamiento por anclas</h1>
