--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <div class="html-card">
+    <!-- HEADER  -->
+    <header class="html-card">
         <div class="html-logo">
             <div class="html-logo-text">html</div>
             <img class="html-logo-logo" alt="Html logo logo" src="../assets/html.svg" />
@@ -24,14 +25,17 @@
             utilizado
             para estructurar y presentar el contenido de las páginas web en Internet.
         </p>
-    </div>
-    <div class="frame">
-        <div class="section">
-            <div class="frame-title">
-                <div class="rectangle" />
-                <div class="section-title">Etiquetas</div>
+    </header>
+
+    <!-- CARDS -->
+    <div class="frame_body">
+
+        <div class="section-a">
+            <div class="section-title">
+                <div class="title">Etiquetas</div>
+                <!-- <div class="rectangle" /> -->
             </div>
-            <p class="div">
+            <p class="section-text">
                 <span class="text-wrapper">
                     Existen dos tipos de etiquetas
                     <br />
@@ -171,7 +175,7 @@
                 <span class="span">
                     (ponerse unas dentro de otras)
                     <br />
-                     En este sitio podrás consultar si una etiqueta puede ir dentro de otra:{" "}
+                    En este sitio podrás consultar si una etiqueta puede ir dentro de otra:{" "}
                 </span>
                 <a href="https://canincluede.glitch.me/" rel="noopener noreferrer" target="_blank">
                     <span class="text-wrapper-3">https://canincluede.glitch.me/</span>
@@ -179,14 +183,17 @@
                 <span class="text-wrapper-3">&nbsp;</span>
             </p>
         </div>
-    </div>
-    <div class="frame">
-        <div class="section">
-            <div class="frame-title">
-                <div class="rectangle" />
-                <div class="section-title">Etiquetas de Textos</div>
+
+    
+    
+        <div class="section-a">
+
+            <div class="section-title">
+                <div class="title">Etiquetas de Textos</div>
+                <!-- <div class="rectangle" /> -->
             </div>
-            <p class="div">
+
+            <p class="section-text">
                 <span class="text-wrapper">Etiquetas heading o de encabezado</span>
                 <span class="text-wrapper-8">
                     {" "}
@@ -292,8 +299,8 @@
             </p>
         </div>
     </div>
-    <img class="ellipse" alt="Ellipse" src="ellipse-1.png" />
-    <img class="img" alt="Ellipse" src="ellipse-2.png" />
+    <!-- <img class="ellipse" alt="Ellipse" src="ellipse-1.png" />
+    <img class="img" alt="Ellipse" src="ellipse-2.png" /> -->
 
 
 
