--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,7 +26,160 @@
             para estructurar y presentar el contenido de las páginas web en Internet.
         </p>
     </header>
+
+    <!-- FRAME BODY -->
+    <div class="frame-body">
+
+        <!-- SECTION1 -->
+        <div class="section">
+            <div class="section-title">
+                <div class="rectangle"> </div>
+                <div class="section-title-text">Etiquetas</div>
+                <div class="rectangle"> </div>
+            </div>
+            <p class="text">
+                <span class="text-wrapper">
+                    Existen dos tipos de etiquetas
+                    <br />
+                </span>
+                <span class="span">
+                    <br />
+                </span>
+                <span class="text-wrapper">1&nbsp;&nbsp;De apertura y cierre </span>
+                <span class="span">
+                    (normalmente encierran contenido)
+                    <br />
+                </span>
+                <span class="text-wrapper-2">
+                    &lt;a&gt; hola &lt;/a&gt;
+                    <br />
+                </span>
+                <span class="text-wrapper">
+                    <br />
+                    2&nbsp;&nbsp;De cierre automático
+                </span>
+                <span class="span">
+                    (no llevan contenido pero si atributos los cuales se separan por un espacio)<br />
+                </span>
+                <span class="text-wrapper-2">&lt;img url=”img.jpg” /&gt; </span>
+                <span class="text-wrapper">&nbsp;</span>
+                <span class="span">
+                    la diagonal del final no es obligatoria
+                    <br />
+                </span>
+                <a href="https://developer.mozilla.org/es/docs/orphaned/Web/HTML/Inline_elements" class="text-wrapper-3" >
+                    <br />
+                    Documentación oficial de html5 de Mozilla
+                    <br />
+                </a>
+                <span class="text-wrapper-4">
+                    <br />
+                </span>
+                <span class="text-wrapper-5">
+                    Estructura de las etiquetas:
+                    <br />
+                </span>
+                <span class="text-wrapper-2">
+                    &lt;nombre de la etiqueta&nbsp;&nbsp;atrib1:”val”&nbsp;&nbsp;atrib2:”val”&gt;&nbsp;&nbsp; <br />
+                </span>
+                <span class="text-wrapper-5">
+                    Contenido
+                    <br />
+                </span>
+                <span class="text-wrapper-2">
+                    &lt;/nombre de la etiqueta&gt;&nbsp;&nbsp;
+                    <br />
+                </span>
+                <span class="text-wrapper-5">
+                    <br />
+                    Estructura base de HTML5:
+                    <br />
+                    <br />
+                </span>
+                <span class="text-wrapper-6">&lt;!DOCTYPE html&gt; //</span>
+                <span class="text-wrapper-7">
+                    indica al navegador q s está usando HTML5
+                    <br />
+                </span>
+                <span class="text-wrapper-6">&lt;html lang=&#34;en&#34;&gt;&nbsp;&nbsp;//</span>
+                <span class="text-wrapper-7">
+                    etiqueta raíz -lang define el lenguaje
+                    <br />
+                </span>
+                <span class="text-wrapper-6">&lt;head&gt; //</span>
+                <span class="text-wrapper-7">
+                    aquí van los metadatos (recursos informativos o de utilidad -nombre -descripción -íconos etc)
+                    <br />
+                </span>
+                <span class="text-wrapper-6">&lt;meta charset=&#34;UTF-8&#34;&gt; //</span>
+                <span class="text-wrapper-7">
+                    permite agregar caracteres especiales -ñ -á etc
+                    <br />
+                </span>
+                <span class="text-wrapper-6">
+                    &lt;meta name=&#34;viewport&#34; content=&#34;width=device-width, initial-scale=1.0&#34;&gt; //
+                </span>
+                <span class="text-wrapper-7">
+                    para adaptarla a dispositivos móviles
+                    <br />
+                </span>
+                <span class="text-wrapper-6">&lt;title&gt;Document&lt;/title&gt; //</span>
+                <span class="text-wrapper-7">
+                    título de la pág q se muestra en el nav
+                </span>
+                <span class="text-wrapper-6">
+                    <br />
+                    &lt;/head&gt;
+                    <br />
+                    &lt;body&gt;
+                    <br />
+                    &lt;/body&gt;
+                    <br />
+                    &lt;/html&gt;
+                    <br />
+                </span>
+                <span class="text-wrapper-5">
+                    <br />
+                </span>
+                <span class="text-wrapper-2">&lt;!--</span>
+                <span class="text-wrapper">&nbsp;</span>
+                <span class="text-wrapper-7">
+                    así se hace un comentario en HTML, lo que esté contenido aquí no aparecerá en el navegador
+                </span>
+                <span class="text-wrapper-8">&nbsp;</span>
+                <span class="text-wrapper">&nbsp;</span>
+                <span class="text-wrapper-2">--&gt;</span>
+                <span class="text-wrapper">
+                    
+                    <br />
+                </span>
+                <span class="text-wrapper-5">
+                    <br />
+                    Las etiquetas estructuran la información basándose es su semántica y jerarquía
+                    <br />
+                </span>
+                <span class="text-wrapper">
+                    Existen etiquetas con funciones específicas
+                    <br />
+                    <br />
+                    Las etiquetas pueden anidarse
+                </span>
+                <span class="span">
+                    (ponerse unas dentro de otras)
+                    <br />
+                    <br />
+                </span>
+                <a href="https://canincluede.glitch.me/" class="text-wrapper-3">
+                    
+                    En este sitio podrás consultar si una etiqueta puede ir dentro de otra:
+                    <br />
+                </a>
+                <span class="text-wrapper-3">&nbsp;</span>
+            </p>
+        </div>
     </div>
+
+
 
 </body>
 
