--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="nav-link" href="./HTML/enlaces-imágenes/enlace.html">Enlaces</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="./HTML/enlaces-imágenes/imagenes/">Imágenes</a>
+                        <a class="nav-link" href="./HTML/enlaces-imágenes/imagenes/imagenes.html">Imágenes</a>
                     </li>
                 </ul>
             </nav>
