detalles_disennando_web

--- a/CSS/colores-fondos/index.html
+++ b/CSS/colores-fondos/index.html
@@ -34,9 +34,8 @@
     <p>
         Generador de paletas de colores <a href="https://coolors.co/">https://coolors.co/</a>
     </p>
-    <p> definiendo la propiedad background-size: si damos un valor lo asumirá de alto y ancho, o si damos dos serán uno
-        para el ancho y el otro para el alto, también definiendo el valor cover la imagen se ajustará al contenedor , y
-        con el valor contain se verá la imagen completa pero no se adaptará al contenedor <br> Con la propiedad
+
+    <p> definiendo la propiedad background-size: si damos un valor lo asumirá de alto y ancho, o si damos dos serán uno para el ancho y el otro para el alto, también definiendo el valor cover la imagen se ajustará al contenedor , y con el valor contain se verá la imagen completa pero no se adaptará al contenedor <br> Con la propiedad
         background-position: center; estaremos centrando la imagen</p>
     <h2 class="logo-img">Probando imagen de fondo </h2>
 
@@ -60,18 +59,12 @@
         <div class="main__circle"></div>
         <h1 class="main__title">Sección con BMS <br> propiedades para los textoooooooooooooooooooooooos</h1>
         <p class="main__paragraph">h1 <br> letter-spacing: 2px; permite definir la separación entre letras <br>
-            word-spacing: 5px; permite definir la separación entre palabras <br> overflow-wrap: break-word; rompe las
-            palabras para evitar que se desborden <br> text-transform: uppercase; permite transformar el texto (todas a
-            mayúsculas), también se puede definir lowercase para ponerlas todas en minúsculas y capitalize que hace que
-            cada palabra comience en mayúscula <br> text-align: center; permite centrar el texto, también se le pueden
-            dar los valores start para alinearlo a la izquierda o end para alinearlo a la derecha <br> font-size: 30px;
-            para controlar el tamaño del texto <br> </p>
+            word-spacing: 5px; permite definir la separación entre palabras <br> overflow-wrap: break-word; rompe las palabras para evitar que se desborden <br> text-transform: uppercase; permite transformar el texto (todas a mayúsculas), también se puede definir lowercase para ponerlas todas en minúsculas y capitalize que hace que cada palabra comience en mayúscula <br> text-align: center; permite centrar el texto, también se le pueden dar los valores start para alinearlo a la izquierda o end para alinearlo a la derecha <br> font-size: 30px; para controlar el tamaño del texto <br> </p>
 
         <p class="main__paragraph main__paragraph--second">
             p <br>
             acá también se usa text align y font size <br>
-            line-height: 1; determina el alto de la línea ,(aquí acepta unidades enteras o píxeles, si multiplicamos las
-            unidades enteras por el font size obtenemos el valor en píxeles) <br> a <br> text-decoration: none; se puede usar para quitar el subrayado de los enlaces 
+            line-height: 1; determina el alto de la línea ,(aquí acepta unidades enteras o píxeles, si multiplicamos las unidades enteras por el font size obtenemos el valor en píxeles) <br> a <br> text-decoration: none; se puede usar para quitar el subrayado de los enlaces 
         </p>
         <a href="#" class="main__cta">Entra ahora</a>
         <p>border-radius: 10px; permite redondear el borde de contenedores <br> 50px es el mayor valor</p>
