--- a/CSS/mediaqueries/index.html
+++ b/CSS/mediaqueries/index.html
@@ -9,18 +9,12 @@
 </head>
 
 <body>
-    <div class="elements">
+    <div class="element">
 
     </div>
     <article class="card">
         <h1 class="card__title">Mediaquery</h1>
-        <p class="paragraph">Mediaquery es un tipo de condicional en css que solo se va a aplicar cuando se cumpla x
-            condición, lo que permite crear diseños adaptables a cualquier dispositivo<br><br>
-            max-width indica el valor máximo que debe tener el viewport para que se apliquen los estilos dentro de un
-            mediaquery , de igual forma con min-width y los valores mínimos <br><br> Se define debajo de todo el css de
-            la siguiente forma @media(min-width: 600px){}
-            <br><br> para max-width los mediaquery deben estar ordenados de mayor a menor y para min-width de menor a
-            mayor
+        <p class="paragraph">Cambia el ancho del viewport para q veas los cambios de color  arriba
         </p>
 
     </article>
