--- a/CSS/selectores/index.html
+++ b/CSS/selectores/index.html
@@ -49,6 +49,10 @@
         </article>
     </section>
 
+    <div class="uno">hola</div>
+    <div class="dos">hola</div>
+    <div id="tres">hola</div>
+
     <!-- <div class="bisabuelo">
         <div class="abuelo">
             <div class="hijo">
