--- a/HTML/formularios/index.html
+++ b/HTML/formularios/index.html
@@ -19,7 +19,7 @@
         <input type="email" name="" id="email" placeholder="ingresa tu email"  required >
         <br><br>
 
-        <label for="password">Ingresa tu password</label>
+        <label for="password">Ingresa tu password</label>   <!--no muestra lo que se scribe -->
         <input type="password" name="" id="password" placeholder="ingresa tu password"  required >
         <br><br>
 
