--- a/HTML/index.html
+++ b/HTML/index.html
@@ -80,7 +80,7 @@
                     <br />
                 </span>
                 <span class="text-wrapper-2">
-                    &lt;nombre de la etiqueta&nbsp;&nbsp;atrib1:”val”&nbsp;&nbsp;atrib2:”val”&gt;&nbsp;&nbsp; <br />
+                    &lt;nombre de la etiqueta&nbsp;&nbsp;atrib1=”val”&nbsp;&nbsp;atrib2=”val”&gt;&nbsp;&nbsp; <br />
                 </span>
                 <span class="text-wrapper-5">
                     Contenido
