--- a/HTML/etiquetas-atributos/index.html
+++ b/HTML/etiquetas-atributos/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- ETIQUETAS -->
+    <a href="./atributos.html#contacto">atributos</a>
     <p>https://canincluede.glitch.me/ saber si una etiqueta puede ir dentro de otra</p> 
     <h1>etiquetas de contenido</h1>
     
