--- a/JS/Introducción/index.html
+++ b/JS/Introducción/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos.css">
-    <script defer src="./condicionales.js"> //este se irá cambiando en cada tema</script> 
+    <script defer src="./metodosParaStrings.js"> //este se irá cambiando en cada tema</script> 
     <title>JS</title>
 </head>
 <body>
     <h1 class="t">Curso de Java Script</h1>
     <h2>Completo práctico y desde cero</h2>
+    <button onClick="saludo()" class="btn"> Saludo </button>
 </body>
 </html>
