--- a/JS/Introducción/index.html
+++ b/JS/Introducción/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos.css">
-    <script defer src="./herencia.js"> //este se irá cambiando en cada tema</script> 
+    <script defer src="./callbacks.js"> //este se irá cambiando en cada tema</script> 
     <title>JS</title>
 </head>
 <body>
